solving security hotspots